2000-07-14  Ulrich Drepper  <drepper@redhat.com>

	* tst-ctype-de_DE.in: Renamed to...
	* tst-ctype-de_DE.ISO-8859-1.in: ...this.

2000-07-11  Andreas Jaeger  <aj@suse.de>

	* Makefile (locale_test_suite): Always run test suite.
	($(addprefix $(objpfx),$(CTYPE_FILES))): Add extra parameter for
	gen-locale.sh.
	(do-collate-test): Likewise.
	(do-tst-fmon): Likewise.
	(do-tst-locale): Likewise.
	(do-tst-rpmatch): Likewise.
	(do-tst-trans): Likewise.
	(do-tst-mbswcs): Likewise.
	(do-tst-ctype): Likewise.

	* sort-test.sh : Rewrite to work with static only builds.
	* tst-ctype.sh: Likewise.
	* tst-fmon.sh: Likewise.
	* tst-locale.sh: Likewise.
	* tst-mbswcs.sh: Likewise.
	* tst-rpmatch.sh: Likewise.
	* tst-trans.sh: Likewise.

	* gen-locale.sh (locfile): Fix it for building with
	sourcedir==builddir and for static only builds.

2000-07-07  Ulrich Drepper  <drepper@redhat.com>

	* locales/POSIX: Remove repertoire map reference.
	* locales/ar_SA: Remove repertoire map reference.

	* locales/zh_CN.GBK: Removed.

	* repertoiremaps/charids.894: Removed.
	* repertoiremaps/mnemonics.ds: Removed.
	* repertoiremaps/mnemonics.ja: Removed.
	* repertoiremaps/mnemonics.ko: Removed.
	* repertoiremaps/mnemonics.zh: Removed.

	* charmaps/SJIS: New file.

2000-07-06  Ulrich Drepper  <drepper@redhat.com>

	* tests-mbwc/dat_mblen.c: Correct data after adding C1 characters
	to EUC-JP.
	* tests-mbwc/dat_mbtowc.c: Likewise.
	* tests-mbwc/dat_wctob.c: Likewise.

	* charmaps/EUC-JP: Make characters in C1 area map to themselves.
	* charmaps/EUC-KR: Likewise.

2000-07-06  Jakub Jelinek  <jakub@redhat.com>

	* locales/af_ZA (LC_TELEPHONE): Add int_prefix.
	* locales/ar_SA (LC_TELEPHONE): Likewise.
	* locales/be_BY (LC_TELEPHONE): Likewise.
	* locales/bg_BG (LC_TELEPHONE): Likewise.
	* locales/ca_ES (LC_TELEPHONE): Likewise.
	* locales/da_DK (LC_TELEPHONE): Likewise.
	* locales/de_BE (LC_TELEPHONE): Likewise.
	* locales/de_CH (LC_TELEPHONE): Likewise.
	* locales/de_LU (LC_TELEPHONE): Likewise.